--- a/main.css
+++ b/main.css
@@ -398,11 +398,11 @@ model-viewer {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.before-text {
+.after-text {
   left: 10px;
 }
 
-.after-text {
+.before-text {
   right: 10px;
 }
 
@@ -420,9 +420,32 @@ model-viewer {
   justify-content: center;
   margin: 40px auto;
   max-width: 100%;
-  background: #EFEFEF;              /* светло-серый фон */
-  border-radius: 20px / 20px;  /* овальные скругления: 50px по горизонтали и 100px по вертикали */
-  padding: 30px 50px;           /* внутренние отступы сверху/снизу и слева/справа */
+  background: #EFEFEF; /* светло-серый фон */
+  border-radius: 20px / 20px; /* овальные скругления: 50px по горизонтали и 100px по вертикали */
+  padding: 30px 50px; /* внутренние отступы сверху/снизу и слева/справа */
+}
+
+.slider-container {
+  width: 350px;
+  aspect-ratio: 4 / 3;
+  position: relative;
+  flex-shrink: 0;
+  margin-left: -300px; /* сдвиг влево */
+}
+
+.slider-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.our-works-text {
+  flex: 1;
+  max-width: 450px;
+  font-size: 30px;
 }
 
 .doctors-title {
