--- a/main.css
+++ b/main.css
@@ -172,7 +172,7 @@ header.header {
 
 .text p {
   color: var(--text-dark);
-  margin-top: 64px;
+  margin-top: 40px;
   text-align: left;
   font-size: 25px;
 }
@@ -236,10 +236,11 @@ model-viewer {
 }
 
 .top-row {
-  margin: 20px 0px;
   width: fit-content;
   display: flex;
   gap: 30px;
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
 
 .top-row img {
@@ -251,7 +252,8 @@ model-viewer {
   width: fit-content;
   display: flex;
   gap: 30px;
-  margin: 20px 0px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .services-list {
@@ -273,6 +275,7 @@ model-viewer {
   font-size: 16px;
   cursor: pointer;
   transition: all 0.3s;
+  border-radius: 40px;
 }
 
 .service-btn:hover {
@@ -328,6 +331,8 @@ model-viewer {
 
 .our-works {
   border-radius: var(--radius);
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .our-works-title {
@@ -335,7 +340,6 @@ model-viewer {
   justify-content: flex-end;
   align-items: center;
   width: 100%;
-  padding-bottom: 20px;
 }
 
 .our-works-title-text {
@@ -354,16 +358,14 @@ model-viewer {
   border-radius: var(--radius);
 }
 
-.doctors-title {
-  margin: 30px 0px;
-}
-
 .card-content {
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
   justify-content: center;
   align-items: inherit;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .card-title {
@@ -411,14 +413,6 @@ model-viewer {
   padding: 20px 0px;
 }
 
-.recording {
-  display: flex;
-  background-color: #efefef;
-  border-radius: var(--radius);
-  padding: 30px;
-  margin-bottom: 30px;
-}
-
 .record {
   background-color: var(--button);
   border: none;
@@ -429,37 +423,6 @@ model-viewer {
   font-size: 20px;
   text-align: center;
   margin: 10px;
-}
-
-.record-data {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  background-color: var(--background);
-  border-radius: var(--radius);
-  text-align: center;
-  justify-content: center;
-  padding: 15px;
-}
-
-.record-title {
-  font-size: 30px;
-  padding: 70px 150px;
-}
-
-.field input {
-  background-color: #d9d9d9;
-  color: #928d8d;
-  width: 100%;
-  padding: 10px 16px;
-  font-size: 16px;
-  border: none;
-  border-radius: var(--radius);
-}
-
-input::placeholder {
-  color: #928d8d;
-  font-size: 15px;
 }
 
 .qq h1 {
@@ -575,6 +538,9 @@ input::placeholder {
   width: 100%;
 }
 
+.footer-text {
+  display: block;
+}
 .footer-content {
   width: 100%;
   max-width: 1000px; /* Или другого значения, соответствующего вашему дизайну */
@@ -594,11 +560,14 @@ input::placeholder {
   font-weight: bold;
 }
 
-.footer p {
+.footer a,
+footer p {
   margin: 0;
   font-size: 16px;
   color: var(--text-light);
-  line-height: 1.5;
+  line-height: 1.3;
+  display: block;
+  text-decoration: none;
 }
 
 .record:hover {
