--- a/main.css
+++ b/main.css
@@ -34,6 +34,14 @@
   --shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+  outline: none;
+  box-shadow: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -58,6 +66,7 @@ main {
 body {
   margin: 0 auto;
 }
+
 header.header {
   display: flex;
   justify-content: space-between;
@@ -451,6 +460,10 @@ model-viewer {
   font-size: 30px;
 }
 
+.our-works-title-text {
+  margin-bottom: 20px;
+}
+
 .doctors-title {
   color: #000000; /* Чёрный цвет */
   font-size: 2rem;
@@ -735,6 +748,18 @@ footer p {
   line-height: 1.3;
   display: block;
   text-decoration: none;
+}
+
+.record {
+  background-color: var(--button);
+  border: none;
+  color: white;
+  padding: 8px 30px;
+  border-radius: var(--radius);
+  cursor: pointer;
+  font-size: 20px;
+  text-align: center;
+  margin: 10px;
 }
 
 .record:hover {
