--- a/main.css
+++ b/main.css
@@ -192,6 +192,7 @@ header.header {
   padding: 8px 16px;
   border-radius: var(--radius);
   color: var(--background);
+  font-weight: 500;
 }
 
 model-viewer {
@@ -877,8 +878,7 @@ footer p {
   }
 
   .item {
-    padding: 12px 24px;
-    font-size: 1.2rem;
+    font-size: 29px;
   }
 
   .about-us h3 {
@@ -1316,21 +1316,3 @@ footer p {
     transform: translateY(0);
   }
 }
-
-/* .card-back {
-  background: #2264d1;
-  color: white;
-  transform: rotateY(180deg);
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-}
-
-.card-front,
-.card-back {
-  backface-visibility: hidden;
-  border-radius: 15px;
-  overflow: hidden;
-} */
